fix: settings wrap colors

--- a/src/app/colors/color-selection/color-selection.component.scss
+++ b/src/app/colors/color-selection/color-selection.component.scss
@@ -1,5 +1,6 @@
 :host {
   display: flex;
+  flex-wrap: wrap;
   text-align: left;
   margin: 0;
 
